# hase_robot

./: .gitignore  CMakeLists.txt  rosinstall
hase_base/: CMakeLists.txt  package.xml
hase_base/include/hase_base/: hase_hardware.h
hase_base/launch/: base.launch
hase_base/src/: hase_base.cpp  hase_hardware.cpp
hase_description/: CMakeLists.txt  package.xml
hase_description/launch/: view_model.launch
hase_description/meshes/: base.dae  base.fcstd  wheel.dae  wheel.fcstd
hase_description/urdf/: hase.urdf.xacro  hase_gazebo.urdf.xacro  hase_kinect.urdf.xacro  hase_standalone.urdf.xacro
hase_description/urdf/sensors/: kinect.urdf.xacro
hase_driver/: CMakeLists.txt  package.xml
hase_driver/include/hase_driver/: hase.hpp  version_info.hpp
hase_driver/src/: CMakeLists.txt
hase_driver/src/driver/: CMakeLists.txt  SimpleGPIO.cpp  SimplePWM.cpp  hase.cpp  version_info.cpp.in
hase_firmware/: CMakeLists.txt  package.xml
hase_firmware/include/hase_firmware/: hase_mbed.hpp
hase_firmware/launch/: hase_diff_drive.launch  hase_mbed_node.launch
hase_firmware/msg/: ImuLite.msg  TwistHaseLite.msg
hase_firmware/src/: hase_mbed.cpp
hase_firmware/src/firmware/: main.cpp  makefile
hase_firmware/src/firmware/libraries/: .gitignore  Hase.cpp  Hase.h  ImuLite.h  Motor.h  OdometryLite.h  PID.cpp  PID.h  QEI.cpp  QEI.h
hase_firmware/src/firmware/libraries/rosserial_mbed/Servo/.hg/: dirstate
hase_firmware/src/firmware/libraries/rosserial_mbed/examples/: ADC.cpp  Blink.cpp  Button_example.cpp  Clapper.cpp  HelloWorld.cpp  IrRanger.cpp  Logging.cpp  Odom.cpp  ServiceClient.cpp  ServiceServer.cpp  ServoControl.cpp  TimeTF.cpp  Ultrasound.cpp  pubsub.cpp
hase_firmware/src/helper/: add_covariance_twist.cpp  add_covariances.cpp  odomlite_to_odom.cpp
hase_gazebo/: CMakeLists.txt  package.xml
hase_gazebo/launch/: hase_empty_world.launch  hase_playground.launch
hase_gazebo/launch/includes/: robot.launch.xml
hase_gazebo_plugins/: CMakeLists.txt  package.xml
hase_gazebo_plugins/include/hase_gazebo_plugins/: gazebo_ros_hase.h
hase_gazebo_plugins/src/: gazebo_ros_hase.cpp
hase_hardware/: pinout
hase_hardware/overlay/: GS-HASE.dts  build
hase_keyop/: CMakeLists.txt  package.xml
hase_keyop/launch/: joy_teleop.launch  keyop.launch
hase_keyop/src/: CMakeLists.txt  main.cpp  teleop_joy.cpp
hase_node/: CMakeLists.txt  package.xml
hase_node/include/hase_node/: hase_ros.hpp
hase_node/launch/: minimal.launch
hase_node/src/: CMakeLists.txt
hase_node/src/hase/: Hase.cpp  MoveRobot.cpp  SimplePWM.cpp
hase_node/src/node/: CMakeLists.txt  hase_node.cpp
hase_robot/: CMakeLists.txt  package.xml
include/hase/: Hase.h  MoveRobot.h  SimplePWM.h
src/: ros_hase_driver_node.cpp  ros_hase_key_node.cpp
src/hase/: MoveRobot.cpp
