<?xml version="1.0"?>
<package>
  <name>hase_base</name>
  <version>0.0.0</version>
  <description>Hase's mobility and sensor base.</description>

  <maintainer email="gary@gmail.com">Gary Servin</maintainer>
  <author email="garyservin@gmail.com">Gary Servin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>hase_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rosserial_server</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>hase_description</run_depend>
  <run_depend>hase_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>rosserial_server</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>sick_tim</run_depend>

  <export>
  </export>
</package>
