<?xml version="1.0"?>
<package>
  <name>hase_description</name>
  <version>0.0.0</version>
  <description>
    Hase Robot Model
    Provides the model descriptios of Hase for simulation and visualization.
  </description>
  <author email="garyservin@gmail.com">Gary Servin</author> 
  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
