<?xml version="1.0"?>
<package>
  <name>hase_keyop</name>
  <version>0.0.0</version>
  <description>
    Keyboard teleoperation for Hase Robot
  </description>
  <author email="garyservin@gmail.com">Gary Servin</author>
  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
